# MCP-hack-2025

./: .env  .gitignore  .repo_structure_plan.md  FINAL_RAG_DIAGNOSIS.md  MIGRATION_GUIDE.md  NEXT_STEPS.md  QUICK_START.md  RAG_FIX_SUMMARY.md  README.md  README_HF.md  README_RAG.md  SECURITY_AUDIT.md  SETUP_RAG_ENV.md  STRUCTURE.md  VLLM_MIGRATION.md  app.py  blaxel_sandbox_connect.py  blaxel_sandbox_create.py  debug_list_csv.py  modal-rag.py  modal_list_files.py  modal_upload.py  query_product_design.py  requirements.txt  run_with_venv.sh  start_mcp_with_rag.sh  start_web.sh  test_rag_direct.py  test_web.py  web_app.py
agent/: API.md  api.py  index.html  test_user_story_agent.py  user_story_agent.md  user_story_agent.py
bkp/: complete_vllm.py  modal-rag-new.py  modal-rag-vllm.py  modal-rag.py.backup  modal.md  run_sandbox.sh
dashboard/: .env.example  README.md  app.js  index.html  requirements.txt  server.py  style.css
deployment/: Dockerfile.rag  Dockerfile.web  README.md  docker-compose.yml  requirements-web.txt
diagrams/: 1-indexing-flow.mmd  2-query-flow-medium.mmd  2-query-flow-simple.mmd  2-query-flow.mmd  3-web-endpoint-flow.mmd  4-container-lifecycle.mmd  README.md  rag-finetune-system.mmd
docs/: HOW_TO_RUN.md  NEXT_STEPS.md  QUICK_START.md  QUICK_START_API.md  QUICK_START_RAG.md  RAG_SETUP_COMPLETE.md  (+20 more)
src/agents/my-agent/: .gitignore  README.md  blaxel.toml  pyproject.toml
src/agents/my-agent/.blaxel/: blaxel-search.yaml
src/agents/my-agent/src/: __main__.py  agent.py  main.py
src/agents/my-agent/src/server/: error.py  middleware.py  router.py
(+83 files in other folders)
